--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,12 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A Novel Approach For Security."
     />
+    <meta property="og:title" content="Graphical Password Auth" />
+    <meta property="og:url" content="https://graphical-auth-client.vercel.app/" />
+    <meta property="og:description" content="A Novel Approach For Security." />
+    <meta property="og:image" content="https://img.icons8.com/material-rounded/96/A259FF/cyber-security.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
