website meta update

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <meta property="og:title" content="Graphical Password Auth" />
     <meta property="og:url" content="https://graphical-auth-client.vercel.app/" />
     <meta property="og:description" content="A Novel Approach For Security." />
-    <meta property="og:image" content="https://img.icons8.com/material-rounded/96/A259FF/cyber-security.png" />
+    <meta property="og:image" content="https://i.pinimg.com/736x/67/a1/a1/67a1a1b9b21505a42648010e3669076e.jpg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
